# Agentic-Sales-System

./: .gitignore  EMAIL_SETUP_GUIDE.md  README.md  README_HACKATHON.md  app.py  config.env.example  demo_crewai_lead_finder.py  demo_lead_finder.py  foursquare_demo.py  foursquare_demo_output.txt  foursquare_simple_example.py  generate_kalamandir_outputs.py  lead_sdr_readme.md  main.py  main_agent.py  pyproject.toml  requirements.txt  start_server.py  test_cost_effective_config.py  test_foursquare.py  test_foursquare_api.py  test_foursquare_basic.py  test_it_services.py  workflow_step_tracker.py
config/: __init__.py  cerebras_client.py
lead_manager/: README.md  __init__.py  agent.py  config.py  prompts.py
lead_manager/sub_agents/: __init__.py  calendar_organizer_agent.py  email_analyzer_agent.py  email_checker_agent.py  post_action_agent.py
lead_manager/tools/: __init__.py  calendar_tools.py  check_email_tool.py  meeting_analysis_tool.py  mongodb_lead_tools.py
leads_finder/: README_FOURSQUARE.md  __init__.py  agent.py  llm_config.py  prompts.py  test_foursquare.py
leads_finder/clients/: map_search_service.py  simple_lead_finder.py
leads_finder/config/: __init__.py  foursquare_config.py
leads_finder/crew/: lead_finder_crew.py
leads_finder/database/: __init__.py  mongodb_client.py
leads_finder/examples/: foursquare_example.py
leads_finder/sub_agents/: __init__.py  cluster_search_agent.py  crewai_lead_finder_agent.py  foursquare_agent.py  foursquare_agent_simple.py  map_agent.py  map_search_agent.py  merger_agent.py  potential_lead_finder_agent.py
leads_finder/tasks/: __init__.py  lead_finder_tasks.py  map_lead_finder_tasks.py
leads_finder/tools/: __init__.py  cluster_search.py  crewai_foursquare_tool.py  foursquare_search.py  foursquare_search_tools.py  map_search.py  mongodb_upload.py
sdr/: __init__.py
sdr/agents/: __init__.py  conversation_classifier_agent.py  draft_writer_agent.py  fact_checker_agent.py  lead_clerk_agent.py  outreach_caller_agent.py  outreach_email_agent.py  proposal_generator_crew.py  research_crew.py  research_lead_agent.py  sdr_crew.py  sdr_main_agent.py
sdr/agents/outreach_email_agent/: __init__.py
sdr/agents/outreach_email_agent/sub_agents/: __init__.py
sdr/agents/outreach_email_agent/sub_agents/email_sender/: email_agent.py  email_crafter_agent.py  email_sender_agent.py
sdr/config/: __init__.py  sdr_config.py
sdr/prompts/: __init__.py  caller_prompts.py  classifier_prompts.py  clerk_prompts.py  email_prompts.py  proposal_prompts.py  research_prompts.py
sdr/tools/: __init__.py  callbacks.py  data_storage_tool.py  email_sender_tool.py  email_tool.py  exa_search_tool.py  phone_call_tool.py
server/: API_DOCUMENTATION.md  Dockerfile  README.md  config.py  main.py  models.py  requirements.txt  run.py  utils.py
